[gd_scene load_steps=6 format=3 uid="uid://cd8ldvmca48t6"]

[ext_resource type="Script" uid="uid://cqixavel2loq4" path="res://Scripts/laska_passenger.gd" id="1_k0uot"]
[ext_resource type="Shader" uid="uid://wpdbogbbxu46" path="res://Shaders/hsv_outline.gdshader" id="2_p2jub"]
[ext_resource type="Texture2D" uid="uid://bqb266gm7b21g" path="res://Assets/Sprites/ProblematicPassangers/Girl_sit.png" id="3_oacip"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a5ttb"]
shader = ExtResource("2_p2jub")
shader_parameter/hue_shift_deg = 0.0
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/alpha = 1.0
shader_parameter/clr = Color(0, 0, 0, 1)
shader_parameter/type = 1
shader_parameter/thickness = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyrvh"]
size = Vector2(28.1875, 22.1333)

[node name="LaskaPassenger" type="Area2D" groups=["Passenger"]]
scale = Vector2(4, 3.75)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_k0uot")

[node name="TexContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_a5ttb")
offset_left = -28.5
offset_top = -42.4
offset_right = 35.5
offset_bottom = 27.6
metadata/_edit_use_anchors_ = true

[node name="Sprites" type="SubViewport" parent="TexContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(64, 70)
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="TexContainer/Sprites"]
position = Vector2(35.5, 32.2666)
texture = ExtResource("3_oacip")

[node name="InteractionArea" type="CollisionShape2D" parent="."]
position = Vector2(9.25, 20)
shape = SubResource("RectangleShape2D_lyrvh")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -18.75
offset_top = -42.9333
offset_right = 213.25
offset_bottom = -0.933334
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "[E] Porozmawiaj"
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
